# android-mascot-nanai

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Dioxus.toml  PROJECT-SPEC.md  README.md  README_OLD.md  TODO.md  deno.json  mascot-nanai.code-workspace  mascot_nanai.md  my-release-key.jks
.github/prompts/: ararat.prompt.md
assets/: styles.css
assets/ghost/mock_nanai/ghost/master/: descript.txt  satori_savedata.txt
assets/ghost/mock_nanai/ghost/master/profile/satolist/: ghost.json
assets/ghost/mock_nanai/shell/master/profile/satolist/surfacepreview/: surfaces.json
assets/ghost/mockv1/: install.txt
assets/ghost/mockv1/ghost/master/: satori_savebackup.txt  satori_savedata.txt
assets/ghost/test_ghost/ghost/master/: descript.txt
docs/: AI_driven.md  DOCUMENTATION_ORGANIZATION.md  DOCUMENTATION_PLAN.md  DOCUMENT_TEMPLATE.md  FAQ.md  INDEX.md  QUICK_START.md  README.md  all_desktopmascot.md  compare_baseware.md  compare_chara_solution.md  compare_device_solution.md  development-approach.md  doc_history.md  documentation-proposal.md  shiori-integration.md  standard-ghost-spec.md  window-design.md
docs/developer/: architecture.md
docs/user/: installation.md  troubleshooting.md  user-guide.md
src/: Cargo.toml  app.rs  index.html  lib.rs  main.js  main.rs  menu-iframe.html  shiori-manager.js  styles.css  styles_new.css  test-menu.html
src-tauri/: Cargo.toml  build.rs  build_old.rs  build_stub.rs  tauri.conf.json  tauri.test.conf.json
src-tauri/.github/workflow/: test.yml
src-tauri/src/: lib.rs  main.rs  shiori_cpp_integration.rs  shiori_ffi.rs  shiori_manager.rs
src/cpp/: yaya_rust_interface.cpp  yaya_rust_interface.h  yaya_rust_interface_stub.cpp
src/scripts/: android-adapter.js  balloon-controller.js  ghost-controller.js  satoriya-shiori.js  settings-controller.js  shiori-manager.js  yaya-shiori.js
src/views/: balloon.css  ghost.css  settings.css
src/windows/: README.md  desktop-features.html  multi-window.html  splashscreen.html  tauri-desktop.conf.json  windows-styles.css
