[package]
name = "mascot_nanai-ui"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dioxus = { version = "0.6", features = ["web"] }
dioxus-logger = "0.6.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
rust-i18n = "3.1.4"
sys-locale = "0.3.2"
encoding_rs = "0.8.33"

[workspace]
members = ["src-tauri", "src"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
