[package]
name = "mascot_nanai"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mascot_nanai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1.0"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8.33"
mascot_nanai_ui = { path = "../src" }
# SHIORI連携用 - C++統合
libc = "0.2"
regex = "1.10"
walkdir = "2.4"
# 文字列処理とメモリ管理
once_cell = "1.19"
parking_lot = "0.12"
